--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap-vue": "^2.0.0",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
+    "express-validator": "^6.3.1",
     "mongoose": "^5.8.7",
     "nuxt": "^2.0.0"
   },
